# LegoIndex

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  requirements.txt
benchmark/: __init__.py  batch.py  batch.sh  batchTest.py  batchTest.sh  benchmark_generator.py  plot_adios_read_block.py  process_log.py  read_benchmark_result.py  select_n.py  select_n_from_results.py  testBenchmark.py
include/geosindex/: Constant.h  bloomfilter.h  buildbase.h  minmaxbuild.h  minmaxquery.h  querybase.h  rtreebuild.h  rtreequery.h  utils.h
openpmd_viewer/openpmd_timeseries/: main.py  particle_tracker.py  utilities.py
openpmd_viewer/openpmd_timeseries/data_reader/: data_reader.py
openpmd_viewer/openpmd_timeseries/data_reader/io_reader/: __init__.py  particle_reader.py  utilities.py
proto/: MetaDataForFile.pb.cc  MetaDataForFile.pb.h  MetaDataForFile.proto  minMaxNode.pb.cc  minMaxNode.pb.h  minMaxNode.proto  treeNode.pb.cc  treeNode.pb.h  treeNode.proto
python/: geosindex.cpp
scripts/: log_summary_large.csv  log_summary_middle.csv  plot.py  plot_adios_read.py  plot_adios_read_block.py  processIndexBuild.py  setup_blosc-1.21.1.sh  testADIOS2Threads.sh  testIndexBuild.sh
scripts/final/: build_middle_with_IO.csv  build_small_debug_1s.csv  build_small_release_1ms.csv
scripts/log/: adios_read_log.txt  adios_read_log_bp10000.txt
src/: bloomfilter.cpp  buildbase.cpp  minmaxbuild.cpp  minmaxquery.cpp  rtreebuild.cpp  rtreequery.cpp  utils.cpp
tests/: testADIOS2Read.cpp  testADIOS2ReadBlock.cpp  testADIOS2Readstatics.cpp  testADIOS2Readstatics_encodef.cpp  testADIOS2Readstatics_encodev.cpp  testADIOS2Threads.cpp  testBloomFilter.cpp  testBuild.cpp  testChangeBlockSizeByVariable.cpp  testChangeBlockSizeForParticle_Extend.cpp  testChangeBlockSizeForParticle_Shrink.cpp  testFileWriteAndRead.cpp  testMinMaxofVector.cpp  testQuery.cpp  testReadAndWriteAttr.cpp  test_bash_default_value.py  test_bash_default_value.sh  test_bash_list.sh  test_default_method.py  test_fbindex.py  test_fbindex_openpmd.py  test_geos.py  test_hstack_vs_mask.py  test_ndarray_performance.py  test_read_speed_large.py  test_read_speed_middle.py  test_read_speed_small.py
